--- a/pyproject.toml
+++ b/pyproject.toml
@@ -83,6 +83,7 @@ dependencies = [
     "pdpyras==5.2.0",
     "phonenumberslite==8.13.6",
     "pillow==10.2.0",
+    "playwright==1.54.0",
     "posthoganalytics>=6.3.1",
     "psutil==6.0.0",
     "psycopg2-binary==2.9.7",
@@ -295,7 +296,7 @@ combine-as-imports = true
 "./posthog/api/capture.py" = ["T201"]
 "./ee/clickhouse/generate_local.py" = ["T201"]
 "./posthog/management/commands/merge_distinct_emails.py" = ["T201"]
-"./posthog/demo/matrix/matrix.py" = ["T201"]
+"./posthog/demo/matrix/*.py" = ["T201"]
 "./posthog/migrations/0038_migrate_actions_to_precalculate_events.py" = ["T201"]
 "./posthog/settings/overrides.py" = ["T201"]
 "./bin/hobby-ci.py" = ["T201"]
