feat(max): Move core insight generation flow to GPT-5

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -61,9 +61,9 @@ dependencies = [
     "jsonref==1.1.0",
     "kafka-python==2.0.2",
     "kombu==5.3.2",
-    "langchain==0.3.26",
+    "langchain==0.3.27",
     "langchain-community==0.3.27",
-    "langchain-openai==0.3.27",
+    "langchain-openai==0.3.28",
     "langgraph==0.4.10",
     "lxml==5.2.1",
     "lzstring==1.0.4",
@@ -75,7 +75,7 @@ dependencies = [
     "natsort==8.4.0",
     "nh3==0.2.14",
     "numpy==1.26.4",
-    "openai==1.91.0",
+    "openai==1.99.2",
     "openpyxl==3.1.2",
     "orjson==3.10.15",
     "pandas==2.2.0",
@@ -121,7 +121,7 @@ dependencies = [
     "structlog==25.4.0",
     "temporalio==1.14.1",
     "tenacity==9.1.2",
-    "tiktoken==0.9.*",
+    "tiktoken==0.10.0",
     "token-bucket==0.3.0",
     "toronado==0.1.0",
     "tree-sitter==0.24.0",
